# cpp-opencv-yolo-detection

./: LICENSE  README.md
opencyproyek/: CMakeLists.txt  main.cpp  output_video.avi
proyek_yolo/: CMakeLists.txt  yolo_main.cpp
